--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -294,7 +294,7 @@
     @apply text-center;
   }
 
-  .product-hero-container {
+  main .section.product-hero-container {
     @apply bg-gray-50 px-2 pt-2 pb-32;
   }
 
